# CodeSample

./: ActorGraph (C++).cpp  ML Perceptron (Python).py  README.md  Streamline (Java).java  readTables (C).c
Six Degrees of Kevin Bacon (C++)/: tra.txt
Six Degrees of Kevin Bacon (C++)/data/: out_paths_unweighted.tsv  out_paths_weighted.tsv  small.tsv
Six Degrees of Kevin Bacon (C++)/src/: linkpredictor.cpp  meson.build  movietraveler.cpp  pathfinder.cpp
Six Degrees of Kevin Bacon (C++)/src/ActorGraph/: ActorGraph.hpp  ActorNode.hpp  meson.build
Six Degrees of Kevin Bacon (C++)/test/: meson.build  test_ActorGraph.cpp
Spam Checker (C)/: Email2  Makefile  README  bitTableAddString.c  checkTables.c  create  create.c  emails_10000  evenOddHash.c  file  freeLinkedList.c  getRemainder.s  hash.s  launchUserQuery.c  launchUserQueryEC.c  llTableAddString.s  mytest2  pa3.h  populateTables.c  prependNode.c  rangeCheck.s  retrieveBit.c  retrieveLinkedList.s  revHash.s  search  search.c  searchEC  test10  testevenOddHash.c  testhash.c  testpopulateTables.c  testprependNode.c  testrevHash.c  testwriteTables.c  writeTables.c
Streamline Game (Java)/: GameState.java  Player.java  README.md  Streamline.java
